--- a/facilita_project/android/app/build.gradle
+++ b/facilita_project/android/app/build.gradle
@@ -70,4 +70,5 @@ flutter {
 dependencies {
     // implementation platform('com.google.firebase:firebase-bom:32.4.0')
      implementation 'com.google.firebase:firebase-analytics:17.2.2'
+     implementation 'com.google.android.gms:play-services-auth:20.7.0'
 }
