--- a/facilita_project/android/app/build.gradle
+++ b/facilita_project/android/app/build.gradle
@@ -52,6 +52,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -71,4 +72,5 @@ dependencies {
     // implementation platform('com.google.firebase:firebase-bom:32.4.0')
      implementation 'com.google.firebase:firebase-analytics:17.2.2'
      implementation 'com.google.android.gms:play-services-auth:20.7.0'
+     implementation 'androidx.multidex:multidex:2.0.1'
 }
