--- a/facilita_project/pubspec.yaml
+++ b/facilita_project/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^1.1.0
 
 # flutter_native_splash:
 #   color: "#3F51B5"
