--- a/facilita_project/pubspec.yaml
+++ b/facilita_project/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: 
   pie_chart: ^5.3.2
   provider: ^6.0.5
   firebase_core: ^2.20.0
