--- a/facilita_project/pubspec.yaml
+++ b/facilita_project/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.4.0
   http: ^1.1.0
+  rxdart: ^0.27.7
 
 # flutter_native_splash:
 #   color: "#3F51B5"
